tests/bits-param/too-many-bits.stderr
error[E0277]: the trait bound `False: FillsUnalignedBits` is not satisfied
 --> tests/bits-param/too-many-bits.rs:4:1
  |
4 | / pub struct SignInteger {
5 | |     sign: bool,
6 | |     value: B31,
7 | | }
  | |_^ the trait `FillsUnalignedBits` is not implemented for `False`
  |
  = help: the trait `FillsUnalignedBits` is implemented for `True`
note: required by a bound in `CheckFillsUnalignedBits`
 --> src/private/checks.rs
  |
  |     <Self::CheckType as DispatchTrueFalse>::Out: FillsUnalignedBits,
  |                                                  ^^^^^^^^^^^^^^^^^^ required by this bound in `CheckFillsUnalignedBits`
